--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-__pycache__
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+env/
+build/
+dist/
+*.egg-info/
+.installed.cfg
+*.egg
